--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,12 +5,11 @@ on:
     tags:
       - 'v*'
 
-permissions:
-  contents: write
-
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -50,7 +49,7 @@ jobs:
           zip calendarN-windows-amd64.zip calendarN-windows-amd64.exe
           
           # Generate checksums
-          shasum -a 256 *.tar.gz *.zip > checksums.txt
+          shasum -a 256 ./*.tar.gz ./*.zip > checksums.txt
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
@@ -66,6 +65,8 @@ jobs:
   update-homebrew:
     needs: release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
